# microblogging-shuttle-ex

./: next.config.js  package-lock.json  package.json  tsconfig.json  zustandStore.ts
app/: globals.css  layout.tsx  page.tsx
app/login/: page.tsx
app/login/callback/: page.tsx
app/posts/: page.tsx
backend/: .gitignore  Cargo.toml
backend/cache/eslint/: .cache_1cd93zv
backend/migrations/: 20230815100114_schema.down.sql  20230815100114_schema.up.sql
backend/src/: main.rs
backend/src/routes/: errors.rs  mod.rs  oauth.rs  posts.rs  users.rs
backend/src/storage/: bucket.rs
components/: Navbar.tsx  TitleHeader.tsx
