[package]
name = "rusoto-shuttle-ex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.18", features = ["multipart", "macros"] }
axum-extra = { version = "0.7.7", features = ["cookie-private"] }
chrono = { version = "0.4.26", features = ["clock"] }
reqwest = "0.11.18"
rust-s3 = "0.33.0"
serde = { version = "1.0.183", features = ["derive"] }
shuttle-axum = "0.23.0"
shuttle-runtime = "0.23.0"
shuttle-secrets = "0.23.0"
shuttle-shared-db = { version = "0.23.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "macros"] }
tokio = "1.28.2"
